--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,61 +1,63 @@
-.wraper {
-  display: block;
-  padding: 8px;
+.formWrapper {
+  margin-bottom: 20px;
+}
+
+.contactSubmitForm {
+  width: 480px;
+  display: flex;
+  flex-direction: column;
   border: 1px solid #806128;
+  border-radius: 6px;
+  background-color: #a18c64;
   border-radius: 8px;
   box-shadow: 4px 4px 4px 0px rgba(130, 60, 43, 0.75);
   -webkit-box-shadow: 4px 4px 4px 0px rgba(130, 60, 43, 0.75);
   -moz-box-shadow: 4px 4px 4px 0px rgba(130, 60, 43, 0.75);
-  margin-bottom: 40px;
-  background-color: #a18c64;
 }
 
-.form {
-  display: flex;
-  flex-direction: column;
-}
-
-.label {
+.formInputLabel {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 8px;
+  margin: 20px 20px 0px 20px;
+  font-size: 24px;
   color: #e2d5cc;
-  font-weight: 600;
 }
 
-.input {
-  width: 220px;
+.formInput {
+  width: 300px;
+  margin-top: 4px;
   padding: 4px;
-  border-radius: 4px;
-  border: 1px solid #806128;
-  color: #eeded3;
+  font-size: 16px;
+  border: 2px solid #806128;
+  border-radius: 6px;
   background-color: #ad9a76;
-  transition: transform, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 250ms ease-in-out;
 }
-
-.input:hover,
-.input:focus {
+.formInput:hover,
+.formInput:focus {
   background-color: #caac73;
   border-color: #d3c2b7;
 }
 
-.btn {
-  display: flex;
+.formSubmitBtn {
+  display: inline-block;
+  width: 160px;
+  height: 40px;
   margin-left: auto;
   margin-right: auto;
-  width: 120px;
-  justify-content: center;
-  padding: 4px;
-  border-radius: 4px;
-  border: 1px solid #806128;
-  color: #eeded3;
-  font-weight: 600;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 18px;
+  text-transform: uppercase;
   background-color: #ad9a76;
-  transition: transform, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: 1px solid #806128;
+  border-radius: 4px;
+  color: #eeded3;
+  box-shadow: none;
+  transition: all 250ms ease-in-out;
 }
-
-.btn:hover,
-.btn:focus {
+.formSubmitBtn:hover,
+.formSubmitBtn:focus {
   background-color: #caac73;
   border-color: #d3c2b7;
 }
