--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -1,38 +1,48 @@
-.wraper{
-    display: flex;
-    justify-content: space-between;
+.contactItemWrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 420px;
+  height: 50px;
+  border: 1px solid #806128;
+  border-radius: 8px;
+  background-color: #a18c64;
+  transition: all 250ms ease-in-out;
+}
+.contactItemWrapper:hover,
+.contactItemWrapper:focus {
+  background-color: #caac73;
+  border-color: #d3c2b7;
+}
+.contactItemName {
+  margin-left: 20px;
+  color: #e2d5cc;
+  display: block;
+  font-weight: 600;
+}
+.contactItemNum {
+  margin-left: auto;
+  font-size: 20px;
+  color: #e2d5cc;
+  text-decoration: none;
+  transition: all 250ms ease-in-out;
+}
+.contactItemNum:hover,
+.contactItemNum:focus {
+  color: #5f3d33;
 }
 
-.name{
-    display: block;
-    width: 120px;
-    color: #e2d5cc;
-    font-weight: 600;
+.deleteBtn {
+  display: inline-block;
+  height: 27px;
+  padding: 0;
+  margin: 0 20px 0 50px;
+  color: #5f3d33;
+  background-color: transparent;
+  border: none;
+  transition: all 250ms ease-in-out;
 }
-
-.tel{
-    display: block;
-    color: #e2d5cc;
-    font-weight: 600;
+.deleteBtn:hover,
+.deleteBtn:focus {
+  color: #ff3939;
 }
-
-.btn {
-    display: flex;
-
-
-    justify-content: center;
-    padding: 4px;
-    border-radius: 4px;
-    border: 1px solid #806128;
-    color: #eeded3;
-    font-weight: 600;
-    background-color: #ad9a76;
-    transition: transform, 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .btn:hover,
-  .btn:focus {
-    background-color: rgb(152, 128, 82);
-    border-color: #d3c2b7;
-  }
-
