--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,18 +1,37 @@
-.wraper__li {
-  display: block;
-  padding: 8px;
+.totalContactsText {
+  font-size: 20px;
+  color: #5f3d33;
+  font-weight: 500;
+}
+.totalContactsNum {
+  margin-left: 4px;
+  color: #806128;
+}
+
+.phonebookList {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 440px;
+  padding: 20px;
   border: 1px solid #806128;
   border-radius: 8px;
+  background-color: #a18c64;
   box-shadow: 4px 4px 4px 0px rgba(130, 60, 43, 0.75);
   -webkit-box-shadow: 4px 4px 4px 0px rgba(130, 60, 43, 0.75);
   -moz-box-shadow: 4px 4px 4px 0px rgba(130, 60, 43, 0.75);
-  margin-bottom: 8px;
-  background-color: #a18c64;
-  transition: transform, 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.wraper__li:hover,
-.wraper__li:focus {
-  background-color: #caac73;
-  border-color: #d3c2b7;
+.listElement {
+  margin-bottom: 20px;
+}
+
+.noMatchesText {
+  margin: 20px 0;
+  font-size: 20px;
+}
+
+.noContactsText {
+  font-size: 20px;
 }
