--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,36 +1,36 @@
-.wraper {
-  display: block;
-  padding: 8px;
+.filterWrapper {
+  display: flex;
+  flex-direction: column;
+
+  margin-bottom: 20px;
   border: 1px solid #806128;
-  border-radius: 8px;
+  background-color: #a18c64;
   box-shadow: 4px 4px 4px 0px rgba(130, 60, 43, 0.75);
   -webkit-box-shadow: 4px 4px 4px 0px rgba(130, 60, 43, 0.75);
   -moz-box-shadow: 4px 4px 4px 0px rgba(130, 60, 43, 0.75);
-  margin-bottom: 40px;
-  background-color: #a18c64;
+  border-radius: 5px;
+  width: 354px;
 }
 
-.label {
-  display: block;
-  text-align: center;
-  margin-bottom: 8px;
-  color: #e2d5cc;
-  font-weight: 600;
+.filterInputLabel {
+  margin: 10px 20px 10px 20px;
+  font-size: 20px;
+  color: #5f3d33;
+  font-weight: 500;
 }
 
-.input {
-  width: 220px;
+.filterInput {
+  width: 300px;
+  margin-top: 4px;
   padding: 4px;
-  border-radius: 4px;
-  border: 1px solid #806128;
-  color: #eeded3;
+  font-size: 16px;
+  border: 2px solid #806128;
+  border-radius: 5px;
   background-color: #ad9a76;
-  transition: transform, 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin-top: 8px;
+  transition: all 250ms ease-in-out;
 }
-
-.input:hover,
-.input:focus {
+.filterInput:hover,
+.filterInput:focus {
   background-color: #caac73;
   border-color: #d3c2b7;
 }
